# PygubuAI

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AI_ADVANCEMENT_SUMMARY.md  AI_E2E_WORKFLOW_GUIDE.md  AI_INTEGRATION_COMPLETE.md  AI_INTEGRATION_FINAL.md  AI_REALWORLD_TEST_RESULTS.md  AI_TEST_REALISM_ASSESSMENT.md  AI_TEST_RESULTS.md  ARCHITECTURE.md  ARCHITECTURE_FIXES_v0.4.2.md  ARCHITECTURE_IMPROVEMENTS.md  BUGFIXES_SUMMARY.md  BUGFIXES_v0.4.0.md  CHANGELOG.md  CHANGELOG_v0.5.1.md  CHECKLIST.md  CI_FIX.md  CLI_IMPROVEMENTS_COMPARISON.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  DATABASE_INTEGRATION.md  DATA_EXPORT_SYSTEM.md  DEMO.md  DESIGNER_INTEGRATION.md  DOCUMENTATION_FIXES.md  FEATURES_ROADMAP_v0.6-0.7.md  FEATURE_ANALYSIS_AND_IMPLEMENTATION.md  FILES_CREATED_v0.5.0.md  FINAL_SUMMARY_v0.6-0.7.md  FIXES_APPLIED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_TEST_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE_v0.5.1_v0.6.0.md  IMPLEMENTATION_COMPLETE_v0.6-0.7.md  (+88 more)
.amazonq/prompts/: pygubu-context.md
.amazonq/rules/: no-special-characters.md  pygubuai-trigger.md
.cline/rules/: pygubuai-trigger.md
.github/workflows/: ci.yml  test-enhanced.yml.disabled
.history/: IMPLEMENTATION_SUMMARY_20251030183136.md  IMPLEMENTATION_SUMMARY_20251030183248.md  README_20251030195414.md  install_20251030175117.sh  install_20251030180624.sh  pygubu-quickstart_20251030175117.py  pygubu-quickstart_20251030180624.py
.history/src/pygubuai/: create_20251030193358.py  templates_20251030194510.py
.kilocode/rules/: pygubuai-trigger.md
.lint_venv/: pyvenv.cfg
.roocode/prompts/: pygubu-context.md
.roocode/rules/: pygubuai-trigger.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMANDS.md  CRITICAL_FIXES_v0.4.1.md  CRITICAL_ISSUES_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPER_QUICK_REF.md  DOCS_MAP.md  ENHANCEMENTS.md  ENHANCEMENTS_IMPLEMENTED.md  ENHANCEMENTS_V0.3.md  FEATURES.md  FEATURE_SHOWCASE.md  FIXES_SUMMARY_v0.4.1.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  INSTALLATION.md  LIBRARY_INTEGRATIONS.md  MULTI_AI_SETUP.md  NEW_FEATURES.md  PROGRESS_TRACKER.md  PROJECT_HISTORY.md  QUICKSTART.md  QUICK_FIX_REFERENCE.md  QUICK_START_V0.2.md  README.md  SECURITY_FIXES.md  SECURITY_GUIDE.md  SECURITY_REVIEW_V1.md  TRIGGER_SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md  WORKFLOW_ENHANCEMENTS.md
examples/: README.md  RUN_EXAMPLES.md
examples/calculator/: README.md  calculator.py  calculator.ui  calculator_standalone.py
examples/data_viewer/: README.md  data_viewer.py  data_viewer.ui
examples/login_form/: README.md  login_form.py  login_form.ui
examples/number_game/: README.md  number_game.py  number_game.ui
examples/settings_dialog/: README.md  settings_dialog.py  settings_dialog.ui
examples/todo_app/: .pygubuai  README.md  todo_app.py  todo_app.ui
integration_test/: README.md  integration_test.db  integration_test.py  integration_test.ui  integration_test.ui.bak
scripts/: setup-cline.sh  setup-kilocode.sh  setup-roocode.sh  setup-trigger.sh
scripts/deprecated/: install.sh
src/pygubuai/: __init__.py  accessibility.py  ai_analyzer.py  ai_context.py  ai_query.py  ai_refactor.py  backup.py  batch.py  cache.py  config.py  converter.py  create.py  data_export.py  database.py  dryrun.py  errors.py  export.py  generator.py  git_integration.py  inspect.py  interactive.py  logging_config.py  migrate_data.py  models.py  multi_watch.py  preview.py  progress.py  prompt.py  register.py  registry.py  snippet.py  status.py  template.py  template_data.py  template_discovery.py  templates.py  theme.py  theme_advanced.py  theme_builder.py  theme_presets.py  (+7 more)
src/pygubuai/db/: __init__.py  models.py  operations.py
tests/: TEST_STRATEGY.md  conftest.py  run_tests.py  test_accessibility.py  test_ai_e2e_workflow.py  test_ai_integration.py  test_ai_realworld.py  test_backup.py  test_bugfixes_v0_4_0.py  test_cache.py  test_cli_integration.py  test_cli_scripts.py  test_config.py  test_create.py  test_create_enhancements.py  test_critical_fixes_v0_4_1.py  test_critical_regression.py  test_data_export.py  test_database.py  test_database_manual.py  test_dryrun.py  test_e2e_workflow.py  test_error_handling.py  test_errors.py  test_git_integration.py  test_integration.py  test_integration_v0_6_7.py  test_interactive.py  test_logging_config.py  test_multi_watch.py  test_new_widgets.py  test_perf_optimizations.py  test_performance.py  test_pydantic_models.py  test_register.py  test_registry.py  test_registry_metadata.py  test_rich_integration.py  test_security_fixes.py  test_snippet.py  (+16 more)
