[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygubuai"
version = "1.0.1"
description = "AI-powered workflow tools for Pygubu"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "PygubuAI Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pygubu>=0.39",
    "pygubu-designer>=0.42",
    "rich>=13.0",
    "pydantic>=2.0",
    "filelock>=3.0",
    "sqlalchemy>=2.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "coverage>=7.0",
    "types-filelock",
    "sqlalchemy[mypy]",
]

[project.scripts]
pygubu-create = "pygubuai.create:main"
pygubu-register = "pygubuai.register:main"
pygubu-template = "pygubuai.template:main"
pygubu-ai-workflow = "pygubuai.workflow:main"
tkinter-to-pygubu = "pygubuai.converter:main"
pygubu-widgets = "pygubuai.widgets:main"
pygubu-status = "pygubuai.status:main"
pygubu-theme = "pygubuai.theme:main"
pygubu-validate = "pygubuai.validate_project:main"
pygubu-inspect = "pygubuai.inspect:main"
pygubu-snippet = "pygubuai.snippet:main"
pygubu-prompt = "pygubuai.prompt:main"
pygubu-batch = "pygubuai.batch:main"
pygubu-export = "pygubuai.export:main"
pygubu-preview = "pygubuai.preview:main"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = false
check_untyped_defs = false

# Only ignore type stubs for libraries without them
[[tool.mypy.overrides]]
module = [
    "rich.*",
    "pygubu.*",
]
ignore_missing_imports = true

# SQLAlchemy has complex types, allow some flexibility
[[tool.mypy.overrides]]
module = "pygubuai.db.*"
warn_return_any = false
disallow_untyped_defs = false
